[gd_scene load_steps=4 format=2]

[ext_resource path="res://Clock.gd" type="Script" id=1]
[ext_resource path="res://Assets/Booth/target_back.png" type="Texture" id=2]
[ext_resource path="res://Assets/Booth/stick_wood_broken.png" type="Texture" id=3]

[node name="Clock" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Body" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Pointer" type="Sprite" parent="."]
texture = ExtResource( 3 )
offset = Vector2( 0, -25 )
region_enabled = true
region_rect = Rect2( 0, 0, 8, 60 )

[node name="LapTime" type="Timer" parent="."]
wait_time = 60.0

[node name="Tick" type="Timer" parent="."]
wait_time = 0.05
[connection signal="timeout" from="LapTime" to="." method="_on_LapTime_timeout"]
[connection signal="timeout" from="Tick" to="." method="_on_Tick_timeout"]
